<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/info_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id"
        android:textSize="@dimen/info_size" />

   <TextView
        android:id="@+id/show_info_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10">
    </TextView>

    <TextView
        android:id="@+id/info_uploader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_uploader" 
        android:textSize="@dimen/info_size" />

    <TextView
        android:id="@+id/show_info_uploader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_date"
        android:textSize="@dimen/info_size"  />

    <TextView
        android:id="@+id/show_info_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/info_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_width"
        android:textSize="@dimen/info_size"  />

    <TextView
        android:id="@+id/show_info_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/info_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_height" 
        android:textSize="@dimen/info_size" />

    <TextView
        android:id="@+id/show_info_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/info_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_path" 
        android:textSize="@dimen/info_size" />

    <TextView
        android:id="@+id/show_info_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/info_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tags"
        android:textSize="@dimen/info_size"  />

    <TextView
        android:id="@+id/show_info_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

</LinearLayout>
